<resources>
    <string name="app_name">AdminAssist</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Мороз Александр</string>
    <string name="nav_header_subtitle">Кураховский городской совет</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_new_task">Новая задача</string>
    <string name="menu_my_tasks">Мои задачи</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_user_list">Пользователи</string>
    <string name="menu_tasks_for_me">Задачи для меня</string>
    <string name="menu_organization_profile">Профиль организации</string>
</resources>