<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_task"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_new_task" />
        <item
            android:id="@+id/nav_my_tasks"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_my_tasks" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_tasks_for_me"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tasks_for_me" />
        <item
            android:id="@+id/nav_user_list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_user_list" />
        <item
            android:id="@+id/nav_organization_profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_organization_profile" />
    </group>
</menu>