<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_new_task">

    <fragment
        android:id="@+id/nav_new_task"
        android:name="com.example.adminassist.ui.newTask.NewTaskFragment"
        android:label="@string/menu_new_task"
        tools:layout="@layout/fragment_new_task" />

    <fragment
        android:id="@+id/nav_my_tasks"
        android:name="com.example.adminassist.ui.myTasks.MyTasksFragment"
        android:label="@string/menu_my_tasks"
        tools:layout="@layout/fragment_my_tasks" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.adminassist.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_tasks_for_me"
        android:name="com.example.adminassist.ui.tasksForMe.TasksForMeFragment"
        android:label="@string/menu_tasks_for_me"
        tools:layout="@layout/fragment_tasks_for_me" />

    <fragment
        android:id="@+id/nav_user_list"
        android:name="com.example.adminassist.ui.userList.UserListFragment"
        android:label="@string/menu_user_list"
        tools:layout="@layout/fragment_user_list" />

    <fragment
        android:id="@+id/nav_organization_profile"
        android:name="com.example.adminassist.ui.organizationProfile.OrganizationProfileFragment"
        android:label="@string/menu_organization_profile"
        tools:layout="@layout/fragment_organization_profile" />
</navigation>